# cast-gpt

./: .env.example  0xbb9b…9413.json  Cargo.toml  LICENSE  README.md  seed-prompt.txt
src/: abi.rs  lib.rs  main.rs  settings.rs
