[package]
name = "cast-gpt"
version = "2.0.0-beta"
authors = ["Abid Omar <contact@omarabid.com>"]
edition = "2021"
repository = "https://github.com/omarabid/rust-starter"
readme = "README.md"
license = "MIT"
keywords = ["cli", "starter"]
description = """
Rust Starter aims to provide high quality components to bootstrap your Rust CLI Project. It includes a battery of most used libraries; and defines a set of Rust best practices.
"""

[dependencies]
alloy-primitives = "0.4.2"
anyhow = "1.0.75"
config = "0.13.3"
dotenv = "0.15.0"
human-panic = "1.2.2"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.4"
serde = "1.0.192"
serde_derive = "1.0.192"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
