[package]
name = "cast-gpt"
version = "2.0.0-beta"
edition = "2021"
readme = "README.md"
license = "MIT"
description = ""

[dependencies]
alloy-primitives = "0.4.2"
anyhow = "1.0.75"
async-openai = "0.16.3"
config = "0.13.3"
dotenv = "0.15.0"
ethers = "2.0.11"
ethers-core = "2.0.11"
ethers-etherscan = "2.0.11"
etherscan = "0.1.0"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
